# mindspace

./: .gitignore  main.cpp  problems.txt  to_do.txt  to_to.txt
block/inc/: add_norm_layer.hpp  all_block_inc.hpp  attention_block.hpp  block.hpp  decoder_block.hpp  dense_layer.hpp  dropout_layer.hpp  embedding_layer.hpp  encoder_block.hpp  ffw_block.hpp  multihead_attention_block.hpp  pos_embed_layer.hpp  relu_layer.hpp  softmax_layer.hpp  transformer_model.hpp
block/src/: add_norm_layer.cpp  block.cpp  decoder_block.cpp  dense_layer.cpp  dropout_layer.cpp  embedding_layer.cpp  encoder_block.cpp  ffw_block.cpp  multihead_attention_block.cpp  pos_embed_layer.cpp  relu_layer.cpp  softmax_layer.cpp  transformer_model.cpp
cmake/: CMakeLists.txt
engine/cpu/: cpu_operations.cpp
inc/: tensor.hpp  tensor_core.hpp
inc/block/: block.hpp  dense_layer.hpp  dropout_layer.hpp  ffw_block.hpp  prebuilt_blocks.hpp  relu_layer.hpp
inc/tensor/: tensor.hpp  tensor_core.hpp
inc/train/: data_loader.hpp  dataset.hpp  optimizer.hpp  standard_optimizer.hpp
readme/: to_do.txt
src/: cpu_tensor_core.cpp  main.cpp  tensor.cpp  tensor_core.cpp
src/block/: dense_layer.cpp  dropout_layer.cpp  ffw_block.cpp  relu_layer.cpp
src/engine/cpu/: cpu_tensor_core.cpp
src/tensor/: tensor.cpp  tensor_core.cpp
src/train/: data_loader.cpp  standard_optimizer.cpp
tensor/inc/: operations.hpp  tensor.hpp
tensor/src/: operations.cpp  tensor.cpp
test/: all_tests.hpp  tensor_core_test.hpp  tensor_test.hpp  test_utils.hpp
test/benchmark/inc/: tensor_bench.hpp
test/inc/unit_test/: ffw_test.hpp  tensor_core_test.hpp
test/unit_test/: all_tests.hpp  tensor_test.hpp
test/unit_test/inc/: all_tests.hpp  block_tests.hpp  tensor_tests.hpp  test.hpp
test/unit_test/src/: block_tests.cpp  tensor_tests.cpp
txt/: doc  problems.txt  to_do.txt
util/inc/: all_util_inc.hpp  dataloader.hpp  dataset.hpp  loss.hpp  optimizer.hpp  standard_optimizer.hpp  tensor_dataset.hpp
util/src/: standard_optimizer.cpp
